--- a/.env
+++ b/.env
@@ -1,20 +1,5 @@
-VUE_APP_EXCHANGE_BLOG_URL=https://blog.vlh.ibisweb3.dev
-VUE_APP_PARTNER_ID=afa2c700-3d46-4dea-82ab-9642f09a3299
-VUE_APP_CRYPTO_SERVICE_API_URL=https://stage-mainnet-new-mobile.review.ibisweb3.dev/crypto
-VUE_APP_WALLET_SERVICE_API_URL=https://stage-mainnet-wallet-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_KYC_SERVICE_API_URL=https://stage-mainnet-new-mobile.review.ibisweb3.dev/kyc
-VUE_APP_DISPLAY_ORDER_SERVICE_API_URL=https://stage-mainnet-display-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_CANDLES_SERVICE_API_URL=https://stage-mainnet-candle-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_NOTIFICATION_SERVICE_API_URL=https://stage-mainnet-notification-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_LIMIT_ORDER_SERVICE_API_URL=https://stage-mainnet-limit-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_MARKET_ORDER_SERVICE_API_URL=https://stage-mainnet-mos-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_OCO_ORDER_SERVICE_API_URL=https://stage-mainnet-oco-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_STOP_LIMIT_ORDER_SERVICE_API_URL=https://stage-mainnet-slo-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_STOP_MARKET_ORDER_SERVICE_API_URL=https://stage-mainnet-smo-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_PAIR_SERVICE_API_URL=https://stage-mainnet-pair-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_CONVERTER_SERVICE_API_URL=https://stage-mainnet-converter-ex-tradesplatform.review.ibisweb3.dev
-VUE_APP_CORPORATE_SERVICE_API_URL=https://stage-mainnet-ex-corppartner.review.ibisweb3.dev
-VUE_APP_USER_SERVICE_API_URL=https://stage-mainnet-user-profile-ex-tradesplatform.review.ibisweb3.dev
+VUE_APP_PARTNER_ID=25139505-dcde-467a-b032-a98f85670ae0
+VUE_APP_CANDLES_SERVICE_API_URL=https://api.flexychain.com/exchange/candle
 VUE_APP_DEFAULT_PAIR_NAME=BTC-USDT
 VUE_APP_DEFAULT_LOADING_PAGEABLE_SIZE=10
 VUE_APP_DEFAULT_LOADING_PAGEABLE_SORT=created,desc
