--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VUE_APP_PARTNER_ID=25139505-dcde-467a-b032-a98f85670ae0
 VUE_APP_CANDLES_SERVICE_API_URL=https://api.flexychain.com/exchange/candle
+VUE_APP_USER_SERVICE_API_URL=https://stage-mainnet-user-profile-ex-tradesplatform.review.ibisweb3.dev
 VUE_APP_DEFAULT_PAIR_NAME=BTC-USDT
 VUE_APP_DEFAULT_LOADING_PAGEABLE_SIZE=10
 VUE_APP_DEFAULT_LOADING_PAGEABLE_SORT=created,desc
